// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate-document-type should handle invalid document type model 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 400",
      "type": "text",
    },
  ],
}
`;

exports[`validate-document-type should validate a valid document type 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
